--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "components-font-awesome": "^5.9.0",
+    "openai": "^3.0.1",
     "openai-api": "^1.3.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
