--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-swipeable-list": "^0.1.2",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "rn-card-scanner": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
