--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,7 @@ target 'Chearner' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  pod 'Permission-Camera', :path => "../node_modules/react-native-permissions/ios/Camera"
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
