--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.1",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
