--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "components-font-awesome": "^5.9.0",
     "openai": "^3.0.1",
     "openai-api": "^1.3.1",
